samples/_failures_safe/1761656011_11886a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_debc8e49.c: In function ‘main’:
./samples/SAFE/__tmp_debc8e49.c:144:20: error: missing terminating " character
  144 |             printf("De
      |                    ^~~
./samples/SAFE/__tmp_debc8e49.c:144:13: error: expected expression at end of input
  144 |             printf("De
      |             ^~~~~~
./samples/SAFE/__tmp_debc8e49.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_debc8e49.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_debc8e49.c:144:13: error: expected declaration or statement at end of input
